# SFML-TicTacToe

./: CMakeLists.txt  MakeAndRunDBG.bat  README.md
src/: GameSettings.h  Log.cpp  Log.h  main.cpp
